--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-leaflet": "^4.2.1",
     "leaflet": "^1.9.4",
     "react-hook-form": "^7.51.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.11",
