--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "html2canvas": "^1.4.1",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^6.22.3",
-    "axios": "^1.11.0",
-    "socket.io-client": "^4.6.1",
-    "react-leaflet": "^4.2.1",
-    "leaflet": "^1.9.4",
     "react-hook-form": "^7.51.0",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.5",
-    "html2canvas": "^1.4.1"
+    "socket.io-client": "^4.6.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.11",
@@ -27,4 +29,3 @@
     "vite": "^7.1.3"
   }
 }
-
