--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "dompurify": "^3.3.1",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
