--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-﻿PORT=3000
+PORT=3000
 MONGODB_URI=mongodb://localhost:27017/baches-rosario
 JWT_SECRET=tu_secret_key_super_segura_aqui
 NODE_ENV=development
