--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
-    "dompurify": "^3.3.1",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
@@ -19,13 +18,9 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.5",
-    "socket.io-client": "^4.6.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.1",
     "vite": "^7.1.3"
   }
